overflow solved

--- a/style.css
+++ b/style.css
@@ -10,15 +10,9 @@
     --bgColor : linear-gradient(45deg,#12664f,#5eb1bf);
 }
 
+b
 
 
-body{
-    overflow: auto;
-   /* background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e); 
-  background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% ); */
-    
-    
-}
 main{
     display: block;
 }
@@ -26,7 +20,7 @@ main{
 
 .hero{
     position: relative;
-    width: 100%;
+    min-width: 100%;
     height: 100vh;
     /* background: linear-gradient(45deg,#12664f,#5eb1bf); */
     display: flex;
@@ -34,6 +28,7 @@ main{
     justify-content: flex-start;
     align-items: center;
     background: var(--bgColor);
+    overflow: hidden;
     
     
 }
